# Kleinanzeigen.Bot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  PROMPT_LOG.md  README.md  kleinanzeigen_bot.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/kleinanzeigen_bot/: __init__.py  __main__.py  app.py  config.py  models.py
src/kleinanzeigen_bot/browser/: login.py  publisher.py  selectors.py  session.py
src/kleinanzeigen_bot/categories/: mapper.py  tree.json
src/kleinanzeigen_bot/pricing/: estimator.py  parser.py  scraper.py
src/kleinanzeigen_bot/static/: app.js  index.html  style.css
src/kleinanzeigen_bot/vision/: analyzer.py  prompts.py
tests/: conftest.py  test_config.py  test_models.py
tests/test_browser/: test_login.py
tests/test_categories/: test_mapper.py
tests/test_pricing/: test_estimator.py  test_parser.py  test_scraper.py
tests/test_vision/: test_analyzer.py
